html css soweit fertig, js erste schritte

--- a/index.html
+++ b/index.html
@@ -34,13 +34,19 @@
             </article>
 
             <article id="counterPoints">
-                <h1>YOU</h1>
-                <h1><span id="userCounter">0</span>:<span id="compCounter">0</span></h1>
-                <h1>COM</h1>
+                <div>
+                    <h1>YOU</h1>
+                    <h1 id="userCount">0</h1>
+                </div>
+
+                <div>
+                    <h1>COMP</h1>
+                    <h1 id="compCount">0</h1>
+                </div>
             </article>
         </section>
 
-        <p id="result">Hallo</p>
+        <p id="result">Rock(user) beats Scissor(comp). You win!</p>
 
         <section id="icons">
             <img value="rock" id="rock" src="assets/img/icons-05.svg" alt="">
@@ -50,7 +56,8 @@
 
         <section id="goodbye">
             <h1>MAKE YOUR MOVE.</h1>
-            <p>restart</p>
+            <button>restart</button>
+
         </section>
 
     </main>
