core game functions done

--- a/index.html
+++ b/index.html
@@ -46,16 +46,17 @@
             </article>
         </section>
 
-        <p id="result">Rock(user) beats Scissor(comp). You win!</p>
+        <p id="result"></p>
 
         <section id="icons">
-            <img value="rock" id="rock" src="assets/img/icons-05.svg" alt="">
-            <img id="paper" src="assets/img/icons-06.svg" alt="">
-            <img id="scissor" src="assets/img/icons-07.svg" alt="">
+            <img value="rock" id="rock" src="assets/img/icons2-05.svg" alt="">
+            <img id="paper" src="assets/img/icons2-06.svg" alt="">
+            <img id="scissor" src="assets/img/icons2-07.svg" alt="">
+    
         </section>
 
         <section id="goodbye">
-            <h1>MAKE YOUR MOVE.</h1>
+            <h2>MAKE YOUR MOVE.</h2>
             <button>restart</button>
 
         </section>
