--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <section>
             <article id="roundsBox">
                 <h2>How many rounds do you want to play?</h2>
-                <form action="">
+                <form action="" id="roundChoice">
                     <div>
-                        <input type="radio" name="rounds" id="5" value="5" checked>
+                        <input type="radio" name="rounds" id="five" value="5" checked>
                         <label for="five">05</label>
-                        <input type="radio" name="rounds" id="10" value="10">
+                        <input type="radio" name="rounds" id="ten" value="10">
                         <label for="ten">10</label>
                     </div>
                     <div>
-                        <input type="radio" name="rounds" id="15" value="15">
+                        <input type="radio" name="rounds" id="fifteen" value="15">
                         <label for="fifteen">15</label>
-                        <input type="radio" name="rounds" id="20" value="20">
+                        <input type="radio" name="rounds" id="twenty" value="20">
                         <label for="twenty">20</label>
                     </div>
                 </form>
