es fehlt nur noch innerhtml...

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                     <h1>YOU</h1>
                     <h1 id="userCount">0</h1>
                 </div>
-
+                    <div>
+                        <h1>ROUNDS</h1>
+                        <h1 id="roundsCounter"></h1>
+                    </div>
                 <div>
                     <h1>COMP</h1>
                     <h1 id="compCount">0</h1>
@@ -57,7 +60,7 @@
 
         <section id="goodbye">
             <h2>MAKE YOUR MOVE.</h2>
-            <button>restart</button>
+            <button id="restart">restart</button>
 
         </section>
 
