css done, js done, jetzt noch vielleicht responsive

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         </section>
 
         <p id="result"></p>
-
+        <h2 id="move">MAKE YOUR MOVE.</h2>
         <section id="icons">
+            
             <img value="rock" id="rock" src="assets/img/icons2-05.svg" alt="">
             <img id="paper" src="assets/img/icons2-06.svg" alt="">
             <img id="scissor" src="assets/img/icons2-07.svg" alt="">
     
         </section>
 
-        <section id="goodbye">
-            <h2>MAKE YOUR MOVE.</h2>
+        <section id="restartBox">
             <button id="restart">restart</button>
 
         </section>
